# jottie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jottie.cpp  jottie.h  jottie.mm
classes/: jottie_LottieAnimation.cpp  jottie_LottieAnimation.h  jottie_LottieComponent.cpp  jottie_LottieComponent.h  jottie_LottieFile.cpp  jottie_LottieFile.h
example/: CMakeLists.txt
example/assets/: cook.lottie  xmas.lottie
example/sources/: JottieExample.h  Main.cpp
jottie/: jottie.cpp  jottie.h  jottie.mm
jottie/classes/: jottie_LottieAnimation.cpp  jottie_LottieComponent.cpp  jottie_LottieComponent.h  jottie_LottieFile.cpp  jottie_LottieFile.h
jottie/rlottie/: config.h
jottie/rlottie/inc/: rlottiecommon.h
jottie/rlottie/src/lottie/: lottieanimation.cpp  lottiefiltermodel.h  lottieitem.h  lottiemodel.h
jottie/rlottie/src/vector/: vdasher.cpp  vdebug.cpp  vdebug.h  vdrawhelper.cpp  vdrawhelper_neon.cpp  vpainter.cpp  vraster.cpp  vrect.cpp
rlottie/: config.h  sse2neon.h
rlottie/inc/: rlottie.h
rlottie/src/binding/c/: lottieanimation_capi.cpp
rlottie/src/lottie/: lottieitem.cpp
rlottie/src/lottie/zip/: miniz.h
rlottie/src/vector/: varenaalloc.cpp  varenaalloc.h  vdrawhelper_common.cpp  vdrawhelper_sse2.cpp  vimageloader.cpp  vrle.cpp
rlottie/src/vector/stb/: stb_image.cpp  stb_image.h
